<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.edmondwang.drawingshapeshw5.SelectionActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/header"
        android:textSize="28sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id = "@+id/circleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/circle"
            android:textSize="20sp"
            android:onClick="radioHandler"/>
        <RadioButton
            android:id = "@+id/triangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/triangle"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:onClick="radioHandler"/>
        <RadioButton
            android:id = "@+id/rectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/rectangle"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:onClick="radioHandler"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/start"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:onClick="startClicked"/>
</LinearLayout>
